[gd_scene load_steps=4 format=2]

[ext_resource path="res://props/details/table_medium.png" type="Texture" id=1]
[ext_resource path="res://props/details/table_medium_yellow.png" type="Texture" id=2]
[ext_resource path="res://rooms/loot_chest/BasicLootChest.gd" type="Script" id=3]

[node name="BasicLootChest" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="ChestEmpty" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ChestFull" type="Sprite" parent="ChestEmpty"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
rotation = 1.5708
